shown number of checkIn for attendee list

--- a/app/app/src/main/res/layout/attendee_content.xml
+++ b/app/app/src/main/res/layout/attendee_content.xml
@@ -11,13 +11,25 @@
         android:id="@+id/attendee_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
+        android:layout_weight="5"
         android:maxLength="50"
-        android:padding="8dp"
+        android:padding="9dp"
         android:text="Attendee"
         android:textColor="@color/White"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:ellipsize="end"
+        android:maxLines="1" />
+    <TextView
+        android:id="@+id/check_in_times_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="8dp"
+        android:background="#102341"
+        android:text="Check-In"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/White"
+        android:textSize="16sp"
         android:maxLines="1" />
 
 </LinearLayout>
